# zFreeType

./: build.gradle
freetype/: build.gradle
freetype/src/main/cpp/: CMakeLists.txt
freetype/src/main/cpp/include/freetype/config/: ftheader.h
freetype/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
